--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,10 @@ android:
     - build-tools-24.0.2
     - android-24
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-18
     - extra-android-support
+
+    - android-22
+    - sys-img-armeabi-v7a-android-22
  
 jdk: oraclejdk8
     
@@ -22,13 +24,15 @@ licenses:
     - 'google-gdk-license-.+'
 
 before_script:
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82
-  - chmod +x gradlew
+    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82
+    - chmod +x gradlew
 
-script: "./gradlew build"
+script: 
+    - echo "Travis branch is $TRAVIS_BRANCH"
+    - "./gradlew build"
 
 sudo: false
 
