--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,14 @@ theme_dir: null
 docs_dir: docs/md
 
 # Extensions (http://pythonhosted.org/Markdown/extensions/)
-markdown_extensions: [toc,fenced_code]
+markdown_extensions:
+  - fenced_code
+  - admonition
+  - smarty
+  - tables
+  - sane_lists
+  - nl2br
+  - footnotes
 
 # Doc pages
 pages:
