--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,9 +25,7 @@ markdown_extensions:
   - sane_lists
   - nl2br
   - footnotes
-  - toc:
-    permalink: True
-    separator: '⚓'
+  - toc
 
 # Doc pages
 pages:
