Minor fix in codeclimate.yml #35

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -15,5 +15,7 @@ ratings:
     - "**.java"
     
 exclude_paths: 
-    - docs/latex/*
-    - docs/img/*
+    - docs/latex/**
+    - docs/img/**
+    - gradle/**
+    - app/src/main/res/**
