--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ sudo: false
 language: android
 jdk: oraclejdk8
 
+env:
+  global:
+    - ANDROID_TARGET=android-22
+    - ANDROID_ABI=armeabi-v7a
+
 android:
   components:
     - tools
@@ -10,8 +15,9 @@ android:
     - android-24  
     - extra-android-support
     - extra-android-m2repository
+    - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}    
     
-  licenses:
+licenses:
     - '.+'
 
 before_script:
@@ -21,7 +27,15 @@ before_script:
     - chmod +x gradlew
 
 script: 
-    - ./gradlew clean build
+    - ./gradlew build jacocoTestReport assembleAndroidTest
+    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+    - ./gradlew connectedCheck
+    
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
 
 cache:
   directories:
