--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ android:
     - android-24  
     - extra-android-support
     - extra-android-m2repository
+    - ${ANDROID_TARGET}
     - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}    
     
 licenses:
