--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,8 @@ before_script:
     - sudo make -j8 install
     - cd ../..
     - mkdir -p native/linux/x86_64
-    - cp opencv/build/lib/libopencv_java248.so native/linux/x86_64/libopencv_java248.so
+    - ls opencv/build/lib/
+    - cp opencv/build/lib/libopencv_java310.so native/linux/x86_64/libopencv_java310.so
     - export PATH=$PATH:$PWD/native/linux/x86_64/
     - echo yes | android update sdk --no-ui --all --filter platform-tools,tools
     - echo yes | android update sdk --no-ui --all --filter build-tools-24.0.3
