--- a/.travis.yml
+++ b/.travis.yml
@@ -27,18 +27,25 @@ before_install:
 
 install:
     - sudo apt-get install python-dev python-numpy
+    - sudo apt-get install unzip wget
   
 before_script:
-    - git clone https://github.com/Itseez/opencv.git
+    - wget https://github.com/opencv/opencv/archive/3.1.0.zip
+    - unzip 3.1.0.zip
+    - mv opencv-3.1.0 opencv
     - cd opencv
-    - git checkout master
     - mkdir build
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -DBUILD_SHARED_LIBS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_TESTS=OFF -DBUILD_PERF_TESTS=OFF ..
+    - export LD_RUN_PATH=/usr/local/lib
     - make -j8
     - sudo make -j8 install
+    - sudo ldconfig
+    - pkg-config --libs opencv
+    - pkg-config --cflags opencv
+    - pkg-config --modversion opencv
     - cd ../..
-    - ls -Rla /usr/local/bin/opencv_*
+    - ls -Rla /usr/local/lib
     - echo yes | android update sdk --no-ui --all --filter platform-tools,tools
     - echo yes | android update sdk --no-ui --all --filter build-tools-24.0.3
     - echo yes | android update sdk --no-ui --all --filter android-24
