--- a/.travis.yml
+++ b/.travis.yml
@@ -37,14 +37,13 @@ before_script:
     - mkdir build
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -DBUILD_SHARED_LIBS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_TESTS=OFF -DBUILD_PERF_TESTS=OFF -DBUILD_opencv_python=OFF ..
-    - export PATH=$PATH:/usr/local/lib/
     - make -j8
     - sudo make -j8 install
     - sudo ldconfig
-    - pkg-config --modversion opencv
-    - ls -la lib
-    - export PATH=$PATH:$PWD/lib/
     - cd ../..
+    - cp opencv/build/lib/libopencv_java310.so native/linux/x86_64/libopencv_java310.so
+    - export PATH=$PATH:$PWD/native/linux/x86_64/
+    - ln -s native/linux/x86_64/libopencv_java310.so native/linux/x86_64/libopencv_java310.so
     - echo yes | android update sdk --no-ui --all --filter platform-tools,tools
     - echo yes | android update sdk --no-ui --all --filter build-tools-24.0.3
     - echo yes | android update sdk --no-ui --all --filter android-24
