--- a/.travis.yml
+++ b/.travis.yml
@@ -26,35 +26,13 @@ before_install:
     - sudo apt-get update
 
 install:
-    - sudo apt-get install python-dev python-numpy
-    - sudo apt-get install unzip wget
+    - sudo apt-get install python-numpy
   
 before_script:
-    - wget https://github.com/opencv/opencv/archive/3.1.0.zip
-    - unzip 3.1.0.zip
-    - mv opencv-3.1.0 opencv
-    - cd opencv
-    - mkdir build
-    - cd build
-    - cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -DBUILD_SHARED_LIBS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_TESTS=OFF -DBUILD_PERF_TESTS=OFF -DBUILD_opencv_python=OFF ..
-    - make -j8
-    - sudo make -j8 install
-    - cd ../..
-    - mkdir opencv_lib
-    - cp opencv/build/lib/libopencv_java310.so opencv_lib/libopencv_java310.so
-    - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/opencv_lib/
-    - echo yes | android update sdk --no-ui --all --filter platform-tools,tools
-    - echo yes | android update sdk --no-ui --all --filter build-tools-24.0.3
-    - echo yes | android update sdk --no-ui --all --filter android-24
-    - chmod +x gradlew
+    - app/src/test/res/install_opencv.sh
 
-script: 
-    - ./gradlew build jacocoTestReport assembleAndroidTest
-    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-    - emulator -avd test -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-    - ./gradlew connectedCheck
+script:
+    - app/src/test/res/launch_emulator.sh
     
 after_success:
     - bash <(curl -s https://codecov.io/bash)
