Fix permission access scripts for Travis #56

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ licenses:
 
 before_install:
     - sudo apt-get update
+    - chmod +x app/src/test/res/install_opencv.sh
+    - chmod +x app/src/test/res/install_opencv.sh
 
 install:
     - sudo apt-get install python-numpy
