--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,13 @@ android {
         }
     }
 
-    // Always show the result of every unit test, even if it passes.
+    testOptions {
+        // android.jar methods return either null or zero, not throw exceptions
+        unitTests.returnDefaultValues = true
+    }
+
     testOptions.unitTests.all {
+        // Always show the result of every unit test, even if it passes
         testLogging {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
         }
@@ -41,8 +46,6 @@ dependencies {
     // Dependencies for local unit tests
     testCompile "junit:junit:$rootProject.ext.junitVersion"
     testCompile "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
-    testCompile "org.powermock:powermock-module-junit4:$rootProject.ext.powerMockito"
-    testCompile "org.powermock:powermock-api-mockito:$rootProject.ext.powerMockito"
 }
 
 /*
