--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'jacoco-android'
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.davidmiguel.gobees"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion 19
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -37,15 +37,15 @@ android {
 
 dependencies {
     // App's dependencies, including test
-    compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
-    compile "com.github.davidmigloz:opencv-android-gradle-repo:$rootProject.openCVVersion"
+    compile "com.android.support:appcompat-v7:25.0.0"
+    compile "com.android.support:cardview-v7:25.0.0"
+    compile "com.android.support:recyclerview-v7:25.0.0"
+    compile "com.github.davidmigloz:opencv-android-gradle-repo:3.1.0"
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Dependencies for local unit tests
-    testCompile "junit:junit:$rootProject.ext.junitVersion"
-    testCompile "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
+    testCompile "junit:junit:4.12"
+    testCompile "org.mockito:mockito-all:2.0.2-beta"
 }
 
 /*
@@ -59,4 +59,28 @@ configurations.compile.dependencies.each { compileDependency ->
     configurations.androidTestCompile.dependencies.each { androidTestCompileDependency ->
         configurations.androidTestCompile.exclude module: "${compileDependency.getName()}"
     }
+}
+
+/*
+Copy test resources directory (debug).
+*/
+task copyResDirectoryToDebugClasses(type: Copy) {
+    from "${projectDir}/src/test/res"
+    into "${buildDir}/intermediates/classes/test/debug/res"
+}
+
+/*
+Copy test resources directory (release).
+*/
+task copyResDirectoryToReleaseClasses(type: Copy) {
+    from "${projectDir}/src/test/res"
+    into "${buildDir}/intermediates/classes/test/release/res"
+}
+
+/*
+Run copy test resources directory tasks before build.
+*/
+afterEvaluate {
+    preBuild.dependsOn(copyResDirectoryToDebugClasses)
+    preBuild.dependsOn(copyResDirectoryToReleaseClasses)
 }
