--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile "com.android.support:cardview-v7:25.0.0"
     compile "com.android.support:recyclerview-v7:25.0.0"
     compile "com.github.davidmigloz:opencv-android-gradle-repo:3.1.0"
+    compile "com.google.guava:guava:18.0"
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Dependencies for local unit tests
