--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,19 +43,20 @@ sourceSets {
 
 dependencies {
     // App's dependencies, including test
-    compile "com.android.support:appcompat-v7:25.0.0"
-    compile "com.android.support:cardview-v7:25.0.0"
-    compile "com.android.support:recyclerview-v7:25.0.0"
-    compile "com.github.davidmigloz:opencv-android-gradle-repo:3.1.0"
-    compile "com.google.guava:guava:18.0"
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.github.davidmigloz:opencv-android-gradle-repo:3.1.0'
+    compile 'com.google.guava:guava:18.0'
 
     // Dependencies for local unit tests
-    testCompile "junit:junit:4.12"
-    testCompile "org.mockito:mockito-all:2.0.2-beta"
-    testCompile "org.slf4j:slf4j-api:1.7.21"
-    testCompile "org.slf4j:slf4j-log4j12:1.7.21"
-    testCompile "log4j:log4j:1.2.17"
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-all:2.0.2-beta'
+    testCompile 'org.slf4j:slf4j-api:1.7.21'
+    testCompile 'org.slf4j:slf4j-log4j12:1.7.21'
+    testCompile 'log4j:log4j:1.2.17'
 }
 
 /*
