--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ script:
     # Run test coverage report
     - ./gradlew jacocoTestMockDebugUnitTestReport
     # Build test app
-    - ./gradlew assembleAndroidTest
+    # ./gradlew assembleAndroidTest
     # Create and lunch emulator
     #- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
     #- emulator -avd test -no-audio -no-window &
