--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.github.davidmigloz:opencv-android-gradle-repo:3.1.0'
     compile 'com.google.guava:guava:20.0'
+    compile 'com.makeramen:roundedimageview:2.2.1'
 
     // Dependencies for local unit tests
     testCompile 'junit:junit:4.12'
