Add intent apiaries -> hives #68

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.davidmiguel.gobees.addeditapiary.AddEditApiaryActivity" />
+        <activity android:name=".addeditapiary.AddEditApiaryActivity" />
+        <activity android:name=".hives.HivesActivity" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape"/>
