Minor refactor camera view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:parentActivityName=".apiaries.ApiariesActivity" />
         <activity android:name=".addedithive.AddEditHiveActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".premonitoring.PreMonitoringActivity"
             android:screenOrientation="landscape"/>
     </application>
 
