--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
         <activity android:name=".addeditapiary.AddEditApiaryActivity" />
         <activity
-            android:name=".hives.HivesActivity"
+            android:name=".apiary.ApiaryActivity"
             android:parentActivityName=".apiaries.ApiariesActivity" />
         <activity android:name=".addedithive.AddEditHiveActivity" />
         <activity
