--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,33 @@
         android:required="false"/>
 
     <application
+        android:name=".GoBeesApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".GoBeesApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.davidmiguel.gobees.apiaries.ApiariesActivity"
+            android:name=".apiaries.ApiariesActivity"
             android:theme="@style/AppTheme.OverlapSystemBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".addeditapiary.AddEditApiaryActivity" />
+        <activity android:name=".addeditapiary.AddEditApiaryActivity"/>
         <activity
             android:name=".apiary.ApiaryActivity"
-            android:parentActivityName=".apiaries.ApiariesActivity" />
-        <activity android:name=".addedithive.AddEditHiveActivity" />
+            android:parentActivityName=".apiaries.ApiariesActivity"/>
+        <activity android:name=".addedithive.AddEditHiveActivity"/>
         <activity
             android:name=".premonitoring.PreMonitoringActivity"
             android:screenOrientation="landscape"/>
+        <activity
+            android:name=".settings.SettingsActivity"
+            android:parentActivityName=".apiaries.ApiariesActivity">
+        </activity>
     </application>
 
 </manifest>
