Add intents and minor changes #87

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:parentActivityName=".apiaries.ApiariesActivity"/>
         <activity android:name=".addedithive.AddEditHiveActivity"/>
         <activity
+            android:name=".hive.HiveActivity"
+            android:parentActivityName=".apiary.ApiaryActivity"/>
+        <activity
             android:name=".premonitoring.PreMonitoringActivity"
             android:screenOrientation="landscape"/>
         <activity
