Fix bug home icon #112

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".apiaries.ApiariesActivity"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.OverlapSystemBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -28,16 +29,23 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".addeditapiary.AddEditApiaryActivity"/>
+        <activity
+            android:name=".addeditapiary.AddEditApiaryActivity"
+            android:parentActivityName=".apiaries.ApiariesActivity"/>
         <activity
             android:name=".apiary.ApiaryActivity"
+            android:launchMode="singleTop"
             android:parentActivityName=".apiaries.ApiariesActivity"/>
-        <activity android:name=".addedithive.AddEditHiveActivity"/>
+        <activity
+            android:name=".addedithive.AddEditHiveActivity"
+            android:parentActivityName=".apiary.ApiaryActivity"/>
         <activity
             android:name=".hive.HiveActivity"
+            android:launchMode="singleTop"
             android:parentActivityName=".apiary.ApiaryActivity"/>
         <activity
             android:name=".premonitoring.PreMonitoringActivity"
+            android:parentActivityName=".hive.HiveActivity"
             android:screenOrientation="landscape"/>
         <activity
             android:name=".settings.SettingsActivity"
