--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,13 +44,15 @@
             android:launchMode="singleTop"
             android:parentActivityName=".apiary.ApiaryActivity"/>
         <activity
+            android:name=".recording.RecordingActivity"
+            android:parentActivityName=".hive.HiveActivity"/>
+        <activity
             android:name=".premonitoring.PreMonitoringActivity"
             android:parentActivityName=".hive.HiveActivity"
             android:screenOrientation="landscape"/>
         <activity
             android:name=".settings.SettingsActivity"
-            android:parentActivityName=".apiaries.ApiariesActivity">
-        </activity>
+            android:parentActivityName=".apiaries.ApiariesActivity"/>
     </application>
 
 </manifest>
