--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.github.davidmigloz:opencv-android-gradle-repo:3.1.0'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.google.guava:guava:20.0'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'com.github.PhilJay:MPAndroidChart-Realm:v2.0.2@aar'
