Refator monitoring to MVP #89

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:name=".recording.RecordingActivity"
             android:parentActivityName=".hive.HiveActivity"/>
         <activity
-            android:name=".premonitoring.PreMonitoringActivity"
+            android:name=".monitoring.MonitoringActivity"
             android:parentActivityName=".hive.HiveActivity"
             android:screenOrientation="landscape"/>
         <activity
