--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,9 +81,9 @@ dependencies {
     compile 'com.github.davidmigloz:opencv-android-gradle-repo:3.1.0'
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.google.guava:guava:20.0'
-    compile 'com.makeramen:roundedimageview:2.2.1'
-    compile 'com.github.PhilJay:MPAndroidChart-Realm:v2.0.2@aar'
+    compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    compile 'com.vanniktech:vntnumberpickerpreference:1.0.0'
 
     // Dependencies for local unit tests
     testCompile 'junit:junit:4.12'
