--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.davidmiguel.gobees"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 2
-        versionName "0.2"
+        versionCode 3
+        versionName "v0.3"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
