--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,9 +51,12 @@
             android:name=".monitoring.MonitoringActivity"
             android:parentActivityName=".hive.HiveActivity"
             android:screenOrientation="landscape"/>
+            <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"/>-->
         <activity
             android:name=".settings.SettingsActivity"
             android:parentActivityName=".apiaries.ApiariesActivity"/>
+
+        <service android:name=".monitoring.MonitoringService"/>
     </application>
 
 </manifest>
