--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,9 +49,10 @@
             android:parentActivityName=".hive.HiveActivity"/>
         <activity
             android:name=".monitoring.MonitoringActivity"
+            android:launchMode="singleTop"
             android:parentActivityName=".hive.HiveActivity"
             android:screenOrientation="landscape"/>
-            <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"/>-->
+        <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"/>-->
         <activity
             android:name=".settings.SettingsActivity"
             android:parentActivityName=".apiaries.ApiariesActivity"/>
