Implement about section #153

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,9 @@
         <activity
             android:name=".settings.SettingsActivity"
             android:parentActivityName=".apiaries.ApiariesActivity"/>
+        <activity
+            android:name=".about.AboutActivity"
+            android:parentActivityName=".apiaries.ApiariesActivity"/>
 
         <service android:name=".monitoring.MonitoringService"/>
     </application>
