--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <https://www.gnu.org/licenses/gpl-3.0.txt>.
  */
+plugins {
+    id "org.sonarqube" version "2.2"
+}
 
 apply plugin: 'com.android.application'
 apply plugin: 'jacoco-android'
