--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.sonarqube" version "2.2"
+}
+apply plugin: 'org.sonarqube'
+
 allprojects {
     repositories {
         jcenter()
@@ -43,4 +48,15 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+/*
+SonarQube configuration.
+https://docs.sonarqube.org/display/SCAN/Analyzing+with+SonarQube+Scanner+for+Gradle
+*/
+sonarqube {
+    properties {
+        property "sonar.projectName", "GoBees"
+        property "sonar.projectKey", "com.davidmiguel.gobees"
+    }
 }
