--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,8 @@ dependencies {
     // Dependencies for local unit tests
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
+    testCompile "org.powermock:powermock-module-junit4:1.6.6"
+    testCompile "org.powermock:powermock-api-mockito:1.6.6"
     testCompile 'org.slf4j:slf4j-api:1.7.22'
     testCompile 'org.slf4j:slf4j-log4j12:1.7.22'
     testCompile 'log4j:log4j:1.2.17'
@@ -128,7 +130,7 @@ dependencies {
 
     // Dependencies for Android unit tests
     androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'org.mockito:mockito-core:2.5.5'
+    androidTestCompile 'org.mockito:mockito-core:2.6.2'
 
     // Espresso UI Testing
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
