Convert to latex points 1 and 2 #124

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ android {
 
     // Lint checks
     lintOptions {
-        disable 'SetJavaScriptEnabled'
+        disable 'SetJavaScriptEnabled','MissingTranslation'
     }
 }
 
